objects/Account_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Account_Profile1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Profile1</label>
        <referenceTo>Account_Profile__c</referenceTo>
        <relationshipLabel>Account Profiles (Account Profile1)</relationshipLabel>
        <relationshipName>Account_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Profile_Setting__c</fullName>
        <label>Account Profile Setting</label>
        <referenceTo>Account_Profile_Setting__c</referenceTo>
        <relationshipLabel>Account Profiles</relationshipLabel>
        <relationshipName>Account_Profiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Profile_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Profile</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account_Profile__c</referenceTo>
        <relationshipLabel>Account Profiles</relationshipLabel>
        <relationshipName>Account_Profiles4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>April02Field02__c</fullName>
        <label>April02Field02</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>April02Field__c</fullName>
        <label>April02Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_field_1__c</fullName>
        <label>Custom field 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Access__c</fullName>
        <inlineHelpText>Custom object help text222222</inlineHelpText>
        <label>Profile Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAT__c</fullName>
        <label>TAT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_currency__c</fullName>
        <label>Test currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Test_field_v02__c</fullName>
        <label>Test field v02</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>picklist2__c</fullName>
        <label>picklist2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>picklist3__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
                <value>
                    <fullName>b</fullName>
                </value>
                <value>
                    <fullName>c</fullName>
                </value>
                <value>
                    <fullName>d</fullName>
                </value>
                <value>
                    <fullName>e</fullName>
                </value>
                <value>
                    <fullName>f</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>picklist3__c</fullName>
        <label>picklist3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                    <isActive>false</isActive>
                    <label>6</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>test_field__c</fullName>
        <label>test field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_formula__c</fullName>
        <formula>Test_currency__c *5</formula>
        <label>test formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Account Profile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Profiles</pluralLabel>
    <recordTypes>
        <fullName>AP1</fullName>
        <active>true</active>
        <label>AP1</label>
    </recordTypes>
    <recordTypes>
        <fullName>AP2</fullName>
        <active>true</active>
        <label>AP2</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TAT_validation</fullName>
        <active>false</active>
        <errorConditionFormula>TAT__c &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>TAT__c</errorDisplayField>
        <errorMessage>TAT cannot be past date</errorMessage>
    </validationRules>
</CustomObject>